--- a/src/scss/chart/index.scss
+++ b/src/scss/chart/index.scss
@@ -2,6 +2,6 @@
 @use "./chart-cartesian";
 @use "./chart-parcoord";
 @use "./layout";
-@use "./toolbar";
+@use "control-elements";
 @use "./header";
 @use "./legend";
