--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -25,4 +25,6 @@
   --color-categorical-8: #e49c4f;
   --color-categorical-9: #a665e4;
   --highlight-brightness: 130%;
+
+  --conrol-elements-color: rgb(239, 239, 239)
 }
