--- a/src/examples-dependencies/styles/respvis.css
+++ b/src/examples-dependencies/styles/respvis.css
@@ -255,7 +255,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  background-color: rgb(239, 239, 239);
+  background-color: var(--conrol-elements-color);
   padding: 0.5em;
 }
 .window-rv .toolbar > .tool + .tool {
@@ -289,7 +289,10 @@
 .window-rv .toolbar dialog.dialog--filter {
   width: min-content;
 }
-.window-rv .toolbar dialog > .item + .item {
+.window-rv .toolbar dialog.dialog--filter .collapsable-wrapper, .window-rv .toolbar dialog.dialog--filter .collapsable, .window-rv .toolbar dialog.dialog--filter label {
+  width: min-content;
+}
+.window-rv .toolbar dialog > .item + .item, .window-rv .toolbar dialog > .item + button {
   margin-top: 0.5em;
 }
 .window-rv .toolbar .dialog-opener {
@@ -297,15 +300,18 @@
   align-items: center;
   height: 2rem;
   padding: 0.25rem;
-  background-color: rgb(239, 239, 239);
-  transition: filter 100ms ease-in-out;
+  background-color: var(--conrol-elements-color);
+  transition: filter 100ms ease-in-out, scale 150ms ease-in-out;
 }
 .window-rv .toolbar .dialog-opener svg {
   height: 100%;
   width: auto;
 }
-.window-rv .toolbar .dialog-opener:hover {
+.window-rv .toolbar .dialog-opener:hover, .window-rv .toolbar .dialog-opener[transition=enter] {
   filter: brightness(80%);
+}
+.window-rv .toolbar .dialog-opener:active {
+  scale: 0.75;
 }
 .window-rv .toolbar .collapsable-opener {
   cursor: pointer;
@@ -333,57 +339,28 @@
   overflow: hidden;
 }
 
-.menu {
-  position: relative;
+.window-rv fieldset {
+  border: 2px solid var(--conrol-elements-color);
+}
+.window-rv .button--icon {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   align-items: center;
+  border: 2px solid var(--conrol-elements-color);
+  padding: 0.25em 0.5em;
+  height: 2rem;
+  gap: 0.5rem;
+  border-radius: 0.25rem;
+  transition: transform 100ms linear, filter 100ms linear;
 }
-
-.menu > .chevron {
-  font-size: 0.7em;
-  margin-right: 0.5em;
+.window-rv .button--icon:hover {
+  filter: brightness(90%);
 }
-
-.menu > .items {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  top: -1px;
-  border: 1px solid rgb(118, 118, 118);
-  display: none;
+.window-rv .button--icon:active {
+  transform: scale(0.95);
+  filter: brightness(90%);
 }
-
-.menu > .items > li {
-  white-space: nowrap;
-  padding: 0.5em;
-  background-color: rgb(239, 239, 239);
-}
-
-.menu:hover,
-.menu > .items > li:hover {
-  filter: brightness(95%);
-}
-
-.menu:hover > .items {
-  display: block;
-  filter: brightness(105.26%);
-}
-
-.menu-tools {
-  z-index: 10;
-  cursor: default;
-}
-
-.menu-tools > .text {
-  font-size: 1.25rem;
-}
-
-.menu > .items {
-  left: 0;
-  top: 100%;
+.window-rv .button--icon svg {
+  height: 100%;
 }
 
 .header .title, .header .subtitle {
@@ -613,6 +590,7 @@ path.line.highlight {
   --color-categorical-8: #e49c4f;
   --color-categorical-9: #a665e4;
   --highlight-brightness: 130%;
+  --conrol-elements-color: rgb(239, 239, 239) ;
 }
 
 .series-label .label {
