--- a/src/scss/chart/legend.scss
+++ b/src/scss/chart/legend.scss
@@ -16,6 +16,11 @@
       }
     }
   }
+  .cross-state {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
 }
 
 [data-legend-position='right'] .legend,
