Dispatch Rerender on various interaction events with chart Add Legend Filtering Improve default legend item layout Add Grouping Element for points in line-chart Fix Stacked Bar Chart Filter Bug

--- a/src/examples/barcharts/stacked-barchart/stacked-barchart.css
+++ b/src/examples/barcharts/stacked-barchart/stacked-barchart.css
@@ -22,6 +22,9 @@ footer {
   .padding-wrapper {
     padding-right: 1rem;
   }
+  .legend-item {
+    width: auto;
+  }
   .legend .items {
     flex-direction: row;
     justify-content: space-evenly;
