--- a/src/examples/barcharts/stacked-barchart/stacked-barchart.scss
+++ b/src/examples/barcharts/stacked-barchart/stacked-barchart.scss
@@ -26,6 +26,10 @@ footer {
     padding-right: 1rem;
   }
 
+  .legend-item {
+    width: auto;
+  }
+
   .legend .items {
     flex-direction: row;
     justify-content: space-evenly;
