--- a/src/scss/chart/layout.scss
+++ b/src/scss/chart/layout.scss
@@ -1,18 +1,17 @@
 .layouter {
   display: grid;
   position: relative;
-}
 
-.layouter > * {
-  grid-area: 1 / 1;
-}
-
-.layouter > :not(.layout) {
-  position: absolute;
-  /* padding and margin are not ignored on root svg elements so they need to
-  be set to 0 to not apply them twice (1x by layouter, 1x by browser) */
-  padding: 0;
-  margin: 0;
+  & > * {
+    grid-area: 1 / 1;
+  }
+  & > :not(.layout) {
+    position: absolute;
+    /* padding and margin are not ignored on root svg elements so they need to
+    be set to 0 to not apply them twice (1x by layouter, 1x by browser) */
+    padding: 0;
+    margin: 0;
+  }
 }
 
 .layout {
@@ -28,10 +27,13 @@
   grid-area: 1 / 1;
 }
 
-.draw-area .background { //.draw-area
-  opacity: 0;
-}
+.window-rv {
+  .layouter {
+    grid-area: chart;
+  }
+  .background { //.draw-area
+    opacity: 0;
+    grid-area: 1 / 1;
+  }
 
-.window-rv .layouter {
-  grid-area: chart;
 }
