--- a/src/examples-dependencies/styles/respvis.css
+++ b/src/examples-dependencies/styles/respvis.css
@@ -208,11 +208,9 @@
   display: grid;
   position: relative;
 }
-
 .layouter > * {
   grid-area: 1/1;
 }
-
 .layouter > :not(.layout) {
   position: absolute;
   /* padding and margin are not ignored on root svg elements so they need to
@@ -235,12 +233,12 @@
   grid-area: 1/1;
 }
 
-.draw-area .background {
-  opacity: 0;
-}
-
 .window-rv .layouter {
   grid-area: chart;
+}
+.window-rv .background {
+  opacity: 0;
+  grid-area: 1/1;
 }
 
 .window-rv:hover .toolbar, .window-rv:active .toolbar {
@@ -381,19 +379,21 @@
   flex-direction: column;
   align-items: center;
   cursor: default;
-  margin: 0.5rem;
+  gap: 0.25rem;
 }
 .legend .title {
   font-size: var(--font-size-legend-title);
   margin: 0 0.5em;
 }
-.legend .items .legend-item .label {
-  font-size: var(--font-size-legend-label);
-}
 .legend .cross-state {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+}
+.legend .items {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
 }
 
 [data-legend-position=right] .legend,
@@ -403,12 +403,6 @@
 
 [data-legend-position=top] .legend {
   justify-self: end;
-}
-
-.legend .items {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
 }
 
 [data-legend-position=left] .legend .items,
@@ -427,16 +421,30 @@
 .legend-item {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  margin: 0.25em;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.6em;
+  width: 100%;
+  font-size: var(--font-size-legend-label);
+  --fit-height: false;
 }
-
+.legend-item.highlight {
+  font-size: calc(1.4 * var(--font-size-legend-label));
+}
+.legend-item:active {
+  font-weight: bold;
+}
+.legend-item .text {
+  --fit-height: false;
+}
 .legend-item .symbol {
-  margin-right: 0.5em;
   stroke: #000;
   stroke-width: 1px;
-  width: 10px;
-  height: 10px;
+  width: 1em;
+  height: 1em;
+}
+.legend-item .label {
+  dominant-baseline: central;
 }
 
 .highlight.legend-item .symbol {
@@ -491,10 +499,6 @@
 [data-style=categorical-9] {
   fill: var(--color-categorical-9);
   stroke: var(--color-categorical-9);
-}
-
-.label.highlight, .legend-item.highlight {
-  font-size: 1.2em;
 }
 
 .text {
