--- a/src/examples/barcharts/grouped-barchart/grouped-barchart.css
+++ b/src/examples/barcharts/grouped-barchart/grouped-barchart.css
@@ -17,10 +17,23 @@ body [data-style=categorical-2] {
   --color-categorical-2: #539322;
 }
 
+#chart .legend .items {
+  align-items: flex-end;
+}
+#chart .legend .items .legend-item {
+  width: auto;
+}
+
 @media (width < 45rem) {
   .chart {
     grid-template: auto 1fr auto/1fr;
     grid-template-areas: "header" "padding-wrapper" "legend";
+  }
+  .chart .legend {
+    padding: 1rem;
+  }
+  .chart .legend .items {
+    align-items: center;
   }
   .legend .title {
     display: none;
