--- a/src/examples/barcharts/grouped-barchart/grouped-barchart.scss
+++ b/src/examples/barcharts/grouped-barchart/grouped-barchart.scss
@@ -11,6 +11,15 @@ body {
   [data-style=categorical-2] { --color-categorical-2: #539322; }
 }
 
+#chart {
+  .legend .items {
+    .legend-item {
+      width: auto;
+    }
+    align-items: flex-end;
+  }
+}
+
 @media (width < 45rem) {
   .chart {
     grid-template: auto 1fr auto / 1fr;
@@ -18,6 +27,12 @@ body {
       'header'
       'padding-wrapper'
       'legend';
+    .legend {
+      padding: 1rem;
+      .items {
+        align-items: center;
+      }
+    }
   }
 
 
