Reposition baseline of texts to fit center of div counterparts Fix legend items symbols double alignment bug Remove Default Growth of Legend Items on Hover Adapt Example Styles to new Changes

--- a/src/examples/barcharts/barchart/barchart.scss
+++ b/src/examples/barcharts/barchart/barchart.scss
@@ -2,6 +2,9 @@
   width: calc(100% - 1.5rem);
   height: 75vh;
   min-height: 25rem;
+  .padding-wrapper {
+    padding-top: 1rem;
+  }
 }
 
 body {
