--- a/src/examples/article/charts/sold-cars-germany/sold-cars-germany.css
+++ b/src/examples/article/charts/sold-cars-germany/sold-cars-germany.css
@@ -6,22 +6,23 @@
   container-type: inline-size;
 }
 @container (width < 30rem) {
-  #sold-cars-germany-chart .chart {
-    grid-template: auto 1fr auto/1fr;
-    grid-template-areas: "header" "padding-wrapper" "legend";
-  }
   #sold-cars-germany-chart .legend {
     width: 100%;
     margin-bottom: 2rem;
-    margin-left: 0.5rem;
+    margin: 0 auto;
     flex-direction: row;
     justify-content: center;
+  }
+  #sold-cars-germany-chart .chart {
+    grid-template: auto 1fr auto/1fr;
+    grid-template-areas: "header" "padding-wrapper" "legend";
   }
   #sold-cars-germany-chart .legend .items {
     display: grid;
     width: 100%;
     justify-content: space-between;
     grid-template-columns: auto auto auto;
+    padding: 0.3rem;
   }
   #sold-cars-germany-chart .legend .items .legend-item {
     justify-content: flex-start;
