--- a/src/examples/barcharts/grouped-barchart/grouped-barchart.scss
+++ b/src/examples/barcharts/grouped-barchart/grouped-barchart.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 75vh;
   min-height: 25rem;
+  & svg.chart { --font-size-legend-label: 1rem; }
 }
 
 body {
@@ -14,7 +15,21 @@ body {
 #chart {
   .legend .items {
     .legend-item {
-      width: auto;
+      width: 5rem;
+      height: 1.5rem;
+      //align-items: center;
+      gap: 0.5rem;
+      justify-content: flex-end;
+      .symbol {
+        //height: 1em;
+        //width: 1em;
+      }
+      //.label {
+      //  dominant-baseline: central;
+      //}
+      &.highlight {
+        font-size: calc(1.4 * var(--font-size-legend-label));
+      }
     }
     align-items: flex-end;
   }
