--- a/src/examples/experimental/aggregated-barchart/barchart.css
+++ b/src/examples/experimental/aggregated-barchart/barchart.css
@@ -6,14 +6,15 @@
 
 #chart-standard {
   margin-bottom: 2rem;
-}
-#chart-standard .window-rv {
-  container-type: inline-size;
-}
-@container (width < 30rem) {
-  #chart-standard .window-rv .axis-left .tick:nth-of-type(2n) {
-    display: none;
+  .window-rv {
+    container-type: inline-size;
+    @container (width < 30rem) {
+      .axis-left .tick:nth-of-type(2n) {
+        display: none;
+      }
+    }
   }
+
 }
 
 body {
