--- a/src/examples/article/charts/sold-cars-germany/sold-cars-germany.css
+++ b/src/examples/article/charts/sold-cars-germany/sold-cars-germany.css
@@ -4,41 +4,46 @@
 
 #sold-cars-germany-chart {
   container-type: inline-size;
-}
+//Legend To Bottom
 @container (width < 30rem) {
-  #sold-cars-germany-chart .legend {
+  .chart {
+    grid-template: auto 1fr auto / 1fr;
+    grid-template-areas:
+      'header'
+      'padding-wrapper'
+      'legend';
+  }
+
+  .legend {
     width: 100%;
     margin-bottom: 2rem;
-    margin: 0 auto;
+    margin-left: 0.5rem;
     flex-direction: row;
     justify-content: center;
+    .items {
+      display: grid;
+      width: 100%;
+      justify-content: space-between;
+      grid-template-columns: auto auto auto;
+      .legend-item {
+        justify-content: flex-start;
+      }
+    }
   }
-  #sold-cars-germany-chart .chart {
-    grid-template: auto 1fr auto/1fr;
-    grid-template-areas: "header" "padding-wrapper" "legend";
-  }
-  #sold-cars-germany-chart .legend .items {
-    display: grid;
-    width: 100%;
-    justify-content: space-between;
-    grid-template-columns: auto auto auto;
-    padding: 0.3rem;
-  }
-  #sold-cars-germany-chart .legend .items .legend-item {
-    justify-content: flex-start;
-  }
-  #sold-cars-germany-chart .axis-y .tick {
+  .axis-y .tick {
     display: none;
-  }
-  #sold-cars-germany-chart .axis-y .tick:nth-of-type(2n + 1), #sold-cars-germany-chart .axis-y .tick:first-of-type, #sold-cars-germany-chart .axis-y .tick:last-of-type {
-    display: block;
+    &:nth-of-type(2n + 1), &:first-of-type, &:last-of-type {
+      display: block;
+    }
   }
 }
-@container (width < 40rem) {
-  #sold-cars-germany-chart .axis-x .tick {
-    display: none;
-  }
-  #sold-cars-germany-chart .axis-x .tick:nth-of-type(2n), #sold-cars-germany-chart .axis-x .tick:first-of-type, #sold-cars-germany-chart .axis-x .tick:last-of-type {
-    display: block;
+  @container (width < 40rem) {
+    .axis-x .tick {
+      display: none;
+      &:nth-of-type(2n), &:first-of-type, &:last-of-type {
+        display: block;
+      }
+    }
   }
 }
+
