--- a/src/examples/article/styles.css
+++ b/src/examples/article/styles.css
@@ -9,6 +9,7 @@
 
 body {
   background-color: floralwhite;
+//max-width: 61rem;
   margin: 3rem auto 0 auto;
   padding: 0 1rem;
 }
@@ -19,7 +20,7 @@ h1 {
 
 .grid-article {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(25rem, 100%), 1fr));
+  grid-template-columns: repeat( auto-fit, minmax(min(25rem, 100%), 1fr));
   max-width: 87.5rem;
   margin: 0 auto;
   grid-gap: 0.063rem;
@@ -29,6 +30,8 @@ h1 {
 .article {
   padding: 1rem;
   background: floralwhite;
+//border-right: 0.063rem solid #DADCE0;
+//border-bottom: 0.063rem solid #DADCE0;
 }
 
 footer {
@@ -38,27 +41,17 @@ footer {
 }
 
 @media (min-width: 43.75rem) {
-  .col-1 {
-    width: 60%;
-  }
-  .col-2 {
-    width: 40%;
-  }
-  .col-3 {
-    width: 100%;
-  }
+  .col-1 { width: 60% }
+  .col-2 { width: 40% }
+  .col-3 { width: 100%}
 }
+
 @media (min-width: 68.75rem) {
-  .col-1 {
-    width: 45%;
-  }
-  .col-2 {
-    width: 27.5%;
-  }
-  .col-3 {
-    width: 27.5%;
-  }
+  .col-1 { width: 45% }
+  .col-2 { width: 27.5% }
+  .col-3 { width: 27.5%}
 }
+
 .chart {
   padding-top: 0;
 }
