--- a/src/examples/barcharts/grouped-barchart/grouped-barchart.css
+++ b/src/examples/barcharts/grouped-barchart/grouped-barchart.css
@@ -2,56 +2,65 @@
   width: 100%;
   height: 75vh;
   min-height: 25rem;
-}
-#chart svg.chart {
-  --font-size-legend-label: 1rem;
+  & svg.chart { --font-size-legend-label: 1rem; }
 }
 
 body {
   background-color: floralwhite;
-}
-body [data-style=categorical-0] {
-  --color-categorical-0: #4f8c9d;
-}
-body [data-style=categorical-1] {
-  --color-categorical-1: #e23209;
-}
-body [data-style=categorical-2] {
-  --color-categorical-2: #539322;
+  [data-style=categorical-0] { --color-categorical-0: #4f8c9d; }
+  [data-style=categorical-1] { --color-categorical-1: #e23209; }
+  [data-style=categorical-2] { --color-categorical-2: #539322; }
 }
 
-#chart .legend .items {
-  align-items: flex-end;
-}
-#chart .legend .items .legend-item {
-  width: 5rem;
-  height: 1.5rem;
-  gap: 0.5rem;
-  justify-content: flex-end;
-}
-#chart .legend .items .legend-item.highlight {
-  font-size: calc(1.4 * var(--font-size-legend-label));
+#chart {
+  .legend .items {
+    .legend-item {
+      width: 5rem;
+      height: 1.5rem;
+    //align-items: center;
+      gap: 0.5rem;
+      justify-content: flex-end;
+      .symbol {
+      //height: 1em;
+      //width: 1em;
+      }
+    //.label {
+    //  dominant-baseline: central;
+    //}
+      &.highlight {
+        font-size: calc(1.4 * var(--font-size-legend-label));
+      }
+    }
+    align-items: flex-end;
+  }
 }
 
 @media (width < 45rem) {
   .chart {
-    grid-template: auto 1fr auto/1fr;
-    grid-template-areas: "header" "padding-wrapper" "legend";
+    grid-template: auto 1fr auto / 1fr;
+    grid-template-areas:
+      'header'
+      'padding-wrapper'
+      'legend';
+    .legend {
+      padding: 1rem;
+      .items {
+        align-items: center;
+      }
+    }
   }
-  .chart .legend {
-    padding: 1rem;
-  }
-  .chart .legend .items {
-    align-items: center;
-  }
+
+
   .legend .title {
     display: none;
   }
+
   .legend .items {
     width: 100%;
     flex-direction: row;
     justify-content: space-evenly;
   }
+
   .axis-y .tick:nth-of-type(2n) {
     display: none;
   }
