--- a/src/examples/barcharts/stacked-barchart/stacked-barchart.css
+++ b/src/examples/barcharts/stacked-barchart/stacked-barchart.css
@@ -16,20 +16,26 @@ footer {
 
 @media (max-width: 40rem) {
   .chart {
-    grid-template: auto 1fr auto/1fr;
-    grid-template-areas: "header" "padding-wrapper" "legend";
+    grid-template: auto 1fr auto / 1fr;
+    grid-template-areas:
+      'header'
+      'padding-wrapper'
+      'legend';
   }
   .padding-wrapper {
     padding-right: 1rem;
   }
+
   .legend-item {
     width: auto;
   }
+
   .legend .items {
     flex-direction: row;
     justify-content: space-evenly;
     width: 100%;
   }
+
   .axis-y .tick:nth-of-type(2n) {
     display: none;
   }
