--- a/src/examples/linecharts/linechart-multiline/linechart-multiline.css
+++ b/src/examples/linecharts/linechart-multiline/linechart-multiline.css
@@ -6,53 +6,61 @@ body {
   width: 100%;
   height: 75vh;
   min-height: 25rem;
-}
-#chart .padding-wrapper {
-  padding-right: 1rem;
-}
-#chart .series-label .label {
-  display: none;
-}
-#chart .legend {
-  margin-left: 2rem;
-}
-#chart .legend-item {
-  margin-top: 1rem;
-}
-#chart .point, #chart .axis-x .tick {
-  display: none;
+  .padding-wrapper {
+    padding-right: 1rem;
+  }
+
+  .series-label .label {
+    display: none;
+  }
+
+  .legend {
+    margin-left: 2rem;
+  }
+
+  .legend-item {
+    margin-top: 1rem;
+  }
+
+  .point, .axis-x .tick {
+    display: none;
+  }
 }
 
 @media (width < 30rem) {
-  #chart .point, #chart .axis-x .tick {
-    display: none;
-  }
-  #chart .point-category .point:first-of-type, #chart .point-category .point:last-of-type {
-    display: block;
-  }
-  #chart .point-category .point:nth-of-type(4n) {
-    display: block;
-  }
-  #chart .axis-x .tick:nth-of-type(4n) {
-    display: block;
+  #chart {
+    .point, .axis-x .tick {
+      display: none;
+    }
+
+    .point-category {
+      .point:first-of-type, .point:last-of-type { display: block; }
+      .point:nth-of-type(4n) { display: block }
+    }
+    .axis-x .tick:nth-of-type(4n) { display: block}
+
   }
 }
+
 @media (min-width: 30rem) {
-  #chart .point-category .point:first-of-type, #chart .point-category .point:last-of-type {
-    display: block;
-  }
-  #chart .point-category .point:nth-of-type(2n) {
-    display: block;
-  }
-  #chart .axis-x .tick:nth-of-type(2n) {
-    display: block;
+  #chart {
+    .point-category {
+      .point:first-of-type, .point:last-of-type { display: block; }
+      .point:nth-of-type(2n) { display: block }
+    }
+    .axis-x .tick:nth-of-type(2n) { display: block}
   }
 }
+
 @media (max-width: 50rem) {
   .chart {
-    grid-template: auto auto 1fr/1fr;
-    grid-template-areas: "header" "legend" "padding-wrapper";
+    grid-template: auto auto 1fr / 1fr;
+    grid-template-areas:
+      'header'
+      'legend'
+      'padding-wrapper';
   }
+
   .legend {
     width: 100%;
     margin-bottom: 2rem;
@@ -64,3 +72,5 @@ body {
     justify-content: space-evenly;
   }
 }
+
+
