--- a/src/examples/parcoords/parcoord/parcoord.css
+++ b/src/examples/parcoords/parcoord/parcoord.css
@@ -2,10 +2,10 @@
   width: 100%;
   height: 75vh;
   min-height: 25rem;
-}
-#chart .padding-wrapper {
-  padding-right: 8rem;
-  padding-left: 4rem;
+  .padding-wrapper {
+    padding-right: 8rem;
+    padding-left: 4rem;
+  }
 }
 
 body {
