--- a/src/examples/scatterplots/scatterplot-labels/scatterplot-labels.css
+++ b/src/examples/scatterplots/scatterplot-labels/scatterplot-labels.css
@@ -5,6 +5,8 @@
 }
 
 #scatterplot-reusable-wide-0 .window-rv {
+/*//--font-size-base: 1.5rem;*/
+/*//--font-size-legend-label: 1.5rem;*/
   --font-size-element-label: 1rem;
   --font-size-axis-label: 1rem;
   --font-size-axis-title: 1.4rem;
