--- a/src/examples/scatterplots/scatterplot/scatterplot.css
+++ b/src/examples/scatterplots/scatterplot/scatterplot.css
@@ -6,54 +6,67 @@ body {
   width: 100%;
   height: 75vh;
   min-height: 25rem;
-}
-#chart .window-rv {
-  container-type: inline-size;
-}
-#chart .window-rv .legend {
-  align-items: flex-start;
-}
-#chart .window-rv .legend .title {
-  margin: 0;
-}
-@container (min-width: 60rem) {
-  #chart .window-rv .tick {
-    display: block;
-  }
-}
-@container (width < 40rem) {
-  #chart .window-rv .chart {
-    grid-template: auto 1fr auto/1fr;
-    grid-template-areas: "header" "padding-wrapper" "legend";
-  }
-  #chart .window-rv .legend {
-    width: 100%;
-    margin-bottom: 2rem;
-    flex-direction: row;
-    justify-content: center;
-  }
-  #chart .window-rv .legend .title {
-    display: none;
-  }
-  #chart .window-rv .legend .items {
-    display: grid;
-    width: 100%;
-    justify-content: space-between;
-    grid-template-columns: auto auto auto;
-  }
-  #chart .window-rv .legend .items .legend-item {
-    justify-content: flex-start;
-  }
-  #chart .window-rv .axis-x .tick {
-    display: none;
-  }
-  #chart .window-rv .axis-x .tick:nth-of-type(2n), #chart .window-rv .axis-x .tick:first-of-type, #chart .window-rv .axis-x .tick:last-of-type {
-    display: block;
-  }
-  #chart .window-rv .axis-y .tick {
-    display: none;
-  }
-  #chart .window-rv .axis-y .tick:nth-of-type(2n + 1), #chart .window-rv .axis-y .tick:first-of-type, #chart .window-rv .axis-y .tick:last-of-type {
-    display: block;
+
+  .window-rv {
+    container-type: inline-size;
+
+    .legend {
+      align-items: flex-start;
+
+      .title {
+        margin: 0;
+      }
+    }
+
+    @container (min-width: 60rem) {
+      .tick {
+        display: block;
+      }
+    }
+
+    @container (width < 40rem) {
+      .chart {
+        grid-template: auto 1fr auto / 1fr;
+        grid-template-areas:
+      'header'
+      'padding-wrapper'
+      'legend';
+      }
+
+      .legend {
+        width: 100%;
+        margin-bottom: 2rem;
+        flex-direction: row;
+        justify-content: center;
+        .title { display: none; }
+
+        .items {
+          display: grid;
+          width: 100%;
+          justify-content: space-between;
+          grid-template-columns: auto auto auto;
+
+          .legend-item {
+            justify-content: flex-start;
+          }
+        }
+      }
+
+      .axis-x .tick {
+        display: none;
+
+        &:nth-of-type(2n), &:first-of-type, &:last-of-type {
+          display: block;
+        }
+      }
+
+      .axis-y .tick {
+        display: none;
+
+        &:nth-of-type(2n + 1), &:first-of-type, &:last-of-type {
+          display: block;
+        }
+      }
+    }
   }
 }
