Minimize space needed for inactive toolbar by adding collapse functionality Test look of static positioned toolbar Automatically close old dialogs when new one is opened

--- a/src/examples/barcharts/grouped-barchart/grouped-barchart.css
+++ b/src/examples/barcharts/grouped-barchart/grouped-barchart.css
@@ -17,16 +17,8 @@ body {
     .legend-item {
       width: 5rem;
       height: 1.5rem;
-    //align-items: center;
       gap: 0.5rem;
       justify-content: flex-end;
-      .symbol {
-      //height: 1em;
-      //width: 1em;
-      }
-    //.label {
-    //  dominant-baseline: central;
-    //}
       &.highlight {
         font-size: calc(1.4 * var(--font-size-legend-label));
       }
@@ -34,6 +26,8 @@ body {
     align-items: flex-end;
   }
 }
+
+.chart .legend { margin-top: 1.5rem; }
 
 @media (width < 45rem) {
   .chart {
@@ -43,6 +37,7 @@ body {
       'padding-wrapper'
       'legend';
     .legend {
+      margin-top: 0;
       padding: 1rem;
       .items {
         align-items: center;
