--- a/src/scss/chart/control-elements/elements.scss
+++ b/src/scss/chart/control-elements/elements.scss
@@ -2,6 +2,7 @@
   fieldset {
     border: 2px solid var(--conrol-elements-color);
   }
+
   .button--icon {
     display: flex;
     align-items: center;
@@ -21,6 +22,33 @@
     }
     svg {
       height: 100%;
+    }
+  }
+
+  .tooltip-simple {
+    //Taken and modified from: https://www.w3schools.com/css/css_tooltip.asp
+    position: absolute;
+    visibility: hidden;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    padding: 0.3rem 0.5rem;
+    border-radius: 0.375rem;
+    z-index: 1;
+    top: calc(100% + 0.3125rem);
+    left: 50%;
+    translate: -50% 0;
+    opacity: 0;
+    transition: opacity 0.3s;
+    &::after {
+      content: " ";
+      position: absolute;
+      bottom: 100%;
+      left: 50%;
+      margin-left: -5px;
+      border-width: 5px;
+      border-style: solid;
+      border-color: transparent transparent #555 transparent;
     }
   }
 }
