Add First Version of LineChart Stories

--- a/src/stories/charts/line-chart/line-chart-spark-line.css
+++ b/src/stories/charts/line-chart/line-chart-spark-line.css
@@ -1,12 +1,4 @@
-.axis .ticks .tick {
-  display: none;
-}
-
-.point {
-  opacity: 0;
-}
-
-.label {
+.axis .ticks .tick, .label {
   display: none;
 }
 
