Reuse Chart Render Functionality Reintroduce Possibility of Labels

--- a/src/examples/barcharts/barchart/barchart.css
+++ b/src/examples/barcharts/barchart/barchart.css
@@ -3,7 +3,10 @@
   height: 75vh;
   min-height: 25rem;
   .padding-wrapper {
-    padding-top: 1rem;
+    padding-top: 3rem;
+  }
+  .draw-area {
+    overflow: visible;
   }
 }
 
