--- a/src/scss/chart/index.scss
+++ b/src/scss/chart/index.scss
@@ -2,6 +2,7 @@
 @use "./chart-cartesian";
 @use "./chart-parcoord";
 @use "./layout";
-@use "./control-elements";
 @use "./header";
 @use "./legend";
+@use "./label-series";
+@use "./control-elements";
